fixed left student calculations in credit reports

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://khalid:Khayamowa6@cluster0.8urff.mongodb.net/gspFinance?retryWrites=true&w=majority"
+MONGO_URI="mongodb://localhost:27017"
 SECRET_KEY="your_secret_key_here"
